--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "Sachit Karki",
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.25.0",
     "express": "^4.17.2",
-    "node-notifier": "^10.0.0"
+    "node-notifier": "^10.0.0",
+    "nodemon": "^2.0.15"
   }
 }
